# coding-in-parallel

./: Makefile  README.md  config.yaml  pyproject.toml
prompts/: ast_recall.txt  plan.txt  probe.txt  propose_diff.txt  synthesize.txt
src/coding_in_parallel/: __init__.py  ast_index.py  config.py  controller.py  gates.py  investigator.py  llm.py  logging.py  main.py  planner.py  proposer.py  tnr.py  types.py  validate.py  vcs.py
tests/: test_agent_logging.py  test_ast_index.py  test_controller.py  test_gates.py  test_investigator.py  test_llm.py  test_main.py  test_planner.py  test_proposer.py  test_tnr.py  test_types.py  test_validate.py  test_vcs.py
